--- a/fr/a_propos.html
+++ b/fr/a_propos.html
@@ -122,16 +122,25 @@
    
     <main class="page">
         <header class="page__header">
-            <img src="/public/img/" alt="image trou de hobbit">
+            <img src="/public/img/accueil.webp" alt="image trou de hobbit">
             <h1 class="page__header--titre">
-                # Titre Article #
+                à propos
             </h1>
             <h2 class="page__header--chapo">
-                # chapo #
+                Qui suis-je ? Et pourquoi ce projet ?
             </h2>
         </header>
 
-        <!-- suite du la page -->
+        <article class="page__article">
+            <p class="page__article--texte">
+                Roy Jérémy, je suis étudiant en 1ère année de MMI (Métiers du Multimédia et de l'Internet) à Montbéliard et avais pour projet la conception d'un site autour d'une réplique de mon choix et de nombreux éléments autours comme le film, le réalisateur, une musique et un livre. 
+                Grand passionné du seigneur des anneaux et connaisseur de tout ce qui tourne autour des films/livres, le choix était donc facile et tout tracé. N'hésitez pas à aller visiter les sites de mes camarades dans la section autres projets juste en dessous !
+            </p>
+            <a href="/fr/autres_projets.html" class="page__article--btn">
+                Autres projets
+                <img src="/public/icones/chevron_right.svg" alt="fleche">
+            </a>
+        </article>  
 
     </main>
 
