--- a/fr/memes.html
+++ b/fr/memes.html
@@ -123,16 +123,126 @@
    
     <main class="page">
         <header class="page__header">
-            <img src="/public/img/" alt="image trou de hobbit">
+            <img src="/public/img/accueil.webp" alt="image trou de hobbit">
             <h1 class="page__header--titre">
-                # Titre Article #
+                Memes
             </h1>
             <h2 class="page__header--chapo">
-                # chapo #
+                Parce que tout bon film / livre continue aussi d'exister via sa communauté, nous vous proposons donc notre sélection de 10 memes. Cependant, il est parfois nécessaire de connaitre les répliques culte ou les blagues entre les fans cachées derrière.
             </h2>
         </header>
 
-        <!-- suite du la page -->
+        <article class="page__article">
+            <div class="meme__box">
+                <img src="/public/img/meme_1.webp" alt="meme 1" class="meme__box--img">
+                <p class="meme__box--trad">
+                    Mon pote : Ne soit pas autant excité, c'est juste une scène de film
+                </p>
+                <p class="meme__box--trad">
+                    La scène en question :
+                </p>
+            </div>
+            <div class="meme__box">
+                <img src="/public/img/meme_2.webp" alt="meme 2" class="meme__box--img">
+                <p class="meme__box--trad">
+                    Je ne peux pas le lire
+                </p>
+                <p class="meme__box--trad">
+                    Peu de gens le peuvent
+                </p>
+            </div>
+            <div class="meme__box">
+                <img src="/public/img/meme_3.webp" alt="meme 3" class="meme__box--img">
+                <p class="meme__box--trad">
+                    Le monde : Personne ne pourra jamais adapter le seigneur des anneaux à l'écran 
+                </p>
+                <p class="meme__box--trad">
+                    Peter Jackson : Pour Tolkien
+                </p>
+            </div>
+            <div class="meme__box">
+                <img src="/public/img/meme_4.webp" alt="meme 4" class="meme__box--img">
+                <p class="meme__box--trad">
+                    - Si vous êtes un ami, vous dites le mot de passe et les portes s'ouvrent 
+                </p>
+                <p class="meme__box--trad">
+                    - mellon 
+                </p>
+                <p class="meme__box--trad">
+                    - Peut-être avec une majuscule 
+                </p>
+                <p class="meme__box--trad">
+                    - Mellon1 
+                </p>
+                <p class="meme__box--trad">
+                    - Un symbole ?... 8 caractères ? 
+                </p>
+                <p class="meme__box--trad">
+                    - Mellon@1 
+                </p>
+                <p class="meme__box--trad">
+                    - Trop d'essais loupés, essayez à nouveau dans 24H
+                </p>
+            </div>
+            <div class="meme__box">
+                <img src="/public/img/meme_5.webp" alt="meme 5" class="meme__box--img">
+                <p class="meme__box--trad">
+                    Je parie que tu ne peux pas faire une des scènes les plus épiques du cinéma avec 9 personnes et un poney qui gravissent une montagne 
+                </p>
+                <p class="meme__box--trad">
+                    Howard Shore : Tiens moi ça j'arrive
+                </p>
+            </div>
+            <div class="meme__box">
+                <img src="/public/img/meme_6.webp" alt="meme 6" class="meme__box--img">
+                <p class="meme__box--trad">
+                    Les mini arrêts cardiaques quand vous ne les trouvez plus dans votre poche
+                </p>
+            </div>
+            <div class="meme__box">
+                <img src="/public/img/meme_7.webp" alt="meme 7" class="meme__box--img">
+                <p class="meme__box--trad">
+                    Mon prof qui souhaite bonne chance à la classe pour le contrôle : 
+                </p>
+                <p class="meme__box--trad">
+                    - vous en aurez besoin 
+                </p>
+                <p class="meme__box--trad">
+                    Moi qui ai fait un marathon de la trilogie du Hobbit au lieu de réviser
+                </p>
+            </div>
+            <div class="meme__box">
+                <img src="/public/img/meme_8.webp" alt="meme 8" class="meme__box--img">
+                <p class="meme__box--trad">
+                    - Les marathons des autres personnes 
+                </p>
+                <p class="meme__box--trad">
+                    - Mes marathons
+                </p>
+            </div>
+            <div class="meme__box">
+                <img src="/public/img/meme_9.webp" alt="meme 9" class="meme__box--img">
+                <p class="meme__box--trad">
+                    - Moi qui regarde les effets spéciaux de Star Wars qui ont dû couter des millions 
+                </p>
+                <p class="meme__box--trad">
+                    - Moi qui regarde une scène ou il y a juste Aragorn, Legolas et Gimli qui courent dans une plaine
+                </p>
+            </div>
+            <div class="meme__box">
+                <img src="/public/img/meme_10.webp" alt="meme 10" class="meme__box--img">
+                <p class="meme__box--trad">
+                    - Et le Rohan répondra ! 
+                </p>
+                <p class="meme__box--trad">
+                    - Dites leurs non.
+                </p>
+            </div>
+            <a href="/fr/differences.html" class="page__article--btn">
+                Différences d'adaptation
+                <img src="/public/icones/chevron_right.svg" alt="fleche">
+            </a>
+        </article>
 
     </main>
 
