--- a/fr/anecdotes.html
+++ b/fr/anecdotes.html
@@ -123,16 +123,108 @@
    
     <main class="page">
         <header class="page__header">
-            <img src="/public/img/" alt="image trou de hobbit">
+            <img src="/public/img/accueil.webp" alt="image trou de hobbit">
             <h1 class="page__header--titre">
-                # Titre Article #
+                Fun Facts
             </h1>
             <h2 class="page__header--chapo">
-                # chapo #
+                Comme chaque film, un bon lot d'anecdotes l'accompagne, sur le tournage et en dehors. 
+                On vous propose une compilation de nos anecdotes préférées, plus ou moins connues.
             </h2>
         </header>
 
-        <!-- suite du la page -->
+        <article class="page__article">
+            <div class="box">
+                <img 
+                    src="/public/img/image_aragorn_pied.webp" 
+                    alt="aragorn casse son doigt de pied"
+                    class="box__img">
+                <p class="media__descriptif">
+                    Aragorn - La communauté de l'anneau
+                </p>
+                <p class="box__texte">
+                    Certainement l'anecdote la plus connue mais comment passer à côté ? Dans le deuxième film, Aragorn est en colère et shoot dans un casque et hurle, et ce pour une bonne raison, en réalité, Viggo Mortensen, l'acteur, c'est casser un doigt de pied, c'est donc un réel cri de douleur qu'il pousse et non du "cinéma".
+                </p>
+            </div>
+            <div class="box">
+                <img 
+                    src="/public/img/image_aragorn_epee.webp" 
+                    alt="aragorn et son épée"
+                    class="box__img">
+                <p class="media__descriptif">
+                    Aragorn - Le retour du roi
+                </p>
+                <p class="box__texte">
+                    Viggo Mortensen avait insisté pour avoir une vraie épée et non un accessoire sur le tournage pour mieux rentrer dans son rôle. En plus d'être considéré comme son meilleur élève par Bob Anderson, le maitre épéiste, cela lui sauvera la vie car lors d'une scène ou un orque lance un couteau, le professionnel déguisé loupe son tire. Viggo va alors contrer le couteau de justesse et sauver sa propre vie.
+                </p>
+            </div>
+            <div class="box">
+                <img 
+                    src="/public/img/image_theoden.webp" 
+                    alt="Theoden"
+                    class="box__img">
+                <p class="media__descriptif">
+                    Theoden - Le retour du roi
+                </p>
+                <p class="box__texte">
+                    Bernard Hill, l'acteur du roi Théoden, a aussi joué dans Titanic. Il est donc indirectement l'acteur le plus oscarisé car il est le seul à avoir joué dans deux des trois films les plus oscarisés (11 oscars), le dernier étant Ben-Hur.
+                </p>
+            </div>
+            <div class="box">
+                <img 
+                    src="/public/img/image_saruman1.webp" 
+                    alt="Saroumane"
+                    class="box__img">
+                <p class="media__descriptif">
+                    Saroumane - La communauté de l'anneau
+                </p>
+                <p class="box__texte">
+                    Christopher Lee [Saroumane], est la seule personne du tournage à avoir rencontré Tolkien en vrai. Celui-ci lui avait donné une lettre signée de sa main qui disait que si un jour il y avait des films, il devait avoir le rôle de Gandalf. Cependant Peter Jackson a complètement ignoré la lettre et lui a donné le rôle de Saroumane, ce qu'on ne regrette pas.
+                </p>
+            </div>
+            <div class="box">
+                <img 
+                    src="/public/img/image_saruman1.webp" 
+                    alt="Saroumane"
+                    class="box__img">
+                <p class="media__descriptif">
+                    Saroumane - La communauté de l'anneau
+                </p>
+                <p class="box__texte">
+                    Eh oui, une anecdote ne suffisait pas ! pendant le tournage des films, Christopher Lee se baladait toujours avec les livres du seigneur des anneaux et corrigeait les erreurs qu'il apercevait. Précisons que depuis plusieurs années, il avait l'habitude de lire au moins une fois par an les livres.
+                </p>
+            </div>
+            <div class="box">
+                <img 
+                    src="/public/img/image_sean_bean.webp" 
+                    alt="Sean Bean"
+                    class="box__img">
+                <p class="media__descriptif">
+                    Sean Bean [Boromir]
+                </p>
+                <p class="box__texte">
+                    Sean Bean [Boromir] a une grosse peur des avions / hélicoptères. Problème ? pour aller sur certains lieux de tournage en pleine montagne, l'équipe devait utiliser ce moyen de transport. Il a donc du marcher plusieurs heures avec son équipement pour les rejoindre.
+                </p>
+            </div>
+            <div class="box">
+                <img 
+                    src="/public/img/image_boromir_mordor.webp" 
+                    alt="Boromir"
+                    class="box__img">
+                <p class="media__descriptif">
+                    Boromir - La communauté de l'anneau
+                </p>
+                <p class="box__texte">
+                    Et enfin, une dernière anecdote pour  terminer en beauté ! Lorsque Sean Bean dit sa réplique "on n'entre pas si facilement en Mordor" il regarde vers le bas. En réalité, il a le script sur les jambes et le lis car le script changeait tous les jours et il n'a pas eu le temps de l'apprendre.
+                </p>
+            </div>
+
+            <a href="/fr/memes.html" class="page__article--btn">
+                Quelques memes
+                <img src="/public/icones/chevron_right.svg" alt="fleche">
+            </a>
+
+        </article>
 
     </main>
 
