--- a/fr/glossaire.html
+++ b/fr/glossaire.html
@@ -123,16 +123,87 @@
    
     <main class="page">
         <header class="page__header">
-            <img src="/public/img/" alt="image trou de hobbit">
+            <img src="/public/img/accueil.webp" alt="image trou de hobbit">
             <h1 class="page__header--titre">
-                # Titre Article #
+                Glossaire
             </h1>
             <h2 class="page__header--chapo">
-                # chapo #
+                Sont répertoriés ici les différents mots pouvant nécessiter une définition plus claire et précise :
             </h2>
         </header>
+        <article class="page__article">
+            <dl class="glossaire">
+                <dt>- Mordor :</dt>
+                <dd>
+                    Pays sombre de la terre du milieu où habite Sauron, la menace du livre 
+                </dd>
 
-        <!-- suite du la page -->
+                <dt>- Terre du milieu :</dt>
+                <dd>
+                    Continent créé par Tolkien et où se déroule l'histoire. 
+                </dd>
+
+                <dt>- Communauté de l'anneau :</dt>
+                <dd>
+                    Groupe de 9 personnes chargées de détruire l'anneau unique.
+                </dd>
+
+                <dt>- Gandalf :</dt>
+                <dd>
+                    Un des 5 magiciens de la terre du milieu, il guide la communauté dans sa quête et conseil les gens à travers la terre du milieu.
+                </dd>
+
+                <dt>- Théoden : </dt>
+                <dd>
+                    Roi du Rohan, personnage important dans les films 2 et 3. 
+                </dd>
+
+                <dt>- Gollum :</dt>
+                <dd>
+                    Créature consumées par l'anneau qui rode en terre du milieu et qui sert de guide à Sam et Frodon, avant il était humain et faisait parti d’une espèces proche des Hobbits, il s’appelait Sméagol. 
+                </dd>
+
+                <dt>- Fondcombe :</dt>
+                <dd>
+                    Une des villes des elfes, dans le nord de la terre du milieu, où est créée la communauté de l'anneau. 
+                </dd>
+
+                <dt>- Rohirrims :</dt>
+                <dd>
+                    Peuple du Rohan, ils sont connus pour être de grands cavaliers.
+                </dd>
+
+                <dt>- Figurant :</dt>
+                <dd>
+                    Personne qui est sur le tournage du film et fait des apparitions dans les foules ou les batailles, il n'a généralement pas de texte à dire.
+                </dd>
+
+                <dt>- Meme :</dt>
+                <dd>
+                    Image ou vidéo détournée pour faire rire, souvent utilisé sur internet.
+                </dd>
+
+                <dt>- Oscar :</dt>
+                <dd>
+                    Plus grande récompense/distinction au cinéma. 
+                </dd>
+
+                <dt>- Aragorn :</dt>
+                <dd>
+                    Membre de la communauté de l'anneau et futur roi du Gondor. 
+                </dd>
+
+                <dt>- Saroumane :</dt>
+                <dd>
+                    Magicien corrompu par Sauron, il est le chef du conseil blanc et est le chef des magiciens.
+                </dd>
+
+                <dt>- Boromir :</dt>
+                <dd>
+                    Membre de la communauté de l'anneau et homme du Gondor, il est le fils préféré de l'intandant du Gondor.
+                </dd>
+            </dl>
+        </article>
 
     </main>
 
