--- a/fr/index.html
+++ b/fr/index.html
@@ -57,13 +57,7 @@
                         <a 
                             class="menu__page--lien"
                             href="/fr/films.html">
-                            Le seigneur des anneaux
-                        </a>
-                        <br>
-                        <a 
-                            class="menu__page--lien"
-                            href="/fr/films.html">
-                            films
+                            Le seigneur des anneaux Films
                         </a>
                     </li>
                     <li class="menu__page">
@@ -84,13 +78,7 @@
                         <a 
                             href="/fr/livres.html"
                             class="menu__page--lien">
-                            Le seigneur des anneaux
-                        </a>
-                        <br>
-                        <a 
-                            href="/fr/livres.html"
-                            class="menu__page--lien">
-                            Livres
+                            Le seigneur des anneaux Livres
                         </a>
                     </li>
                     <li class="menu__page">
@@ -102,14 +90,14 @@
                     </li>
                     <li class="menu__page">
                         <a 
-                            href="/fr/livres.html"
+                            href="/fr/memes.html"
                             class="menu__page--lien">
                             Memes                      
                         </a>
                     </li>
                     <li class="menu__page">
                         <a 
-                            href="/fr/livres.html"
+                            href="/fr/differences.html"
                             class="menu__page--lien">
                             Différences livres / films                        
                         </a>
@@ -122,15 +110,15 @@
 
     <main class="page">
         <header class="page__header">
-            <img src="/public/img/accueil.webp" alt="image trou de hobbit">
+            <img src="/public/img/accueil.webp" alt="image trou de hobbit" class="page__header--img">
             <h1 class="page__header--titre">
                 Articles Principaux
-            </h1>
+            </h1>        
+        </header>
+        <article class="page__article">
             <h2 class="page__header--chapo">
                 Le seigneur des anneaux, un des plus grands chefs d'œuvre du cinéma, il a marqué les esprits avec des musiques, des dialogues et des scènes culte, en rendant hommage à l'œuvre de Tolkien.
             </h2>
-        </header>
-        <article class="article">
             <img 
                 src="/public/img/index_carte2.webp" 
                 alt="carte terre du milieu"
@@ -167,7 +155,7 @@
                     Un film culte en tous points, découvrez les coulisses de la création du film                
                 </p>
             </div>
-            <a href="/fr/replique.html" class="article__btn">
+            <a href="/fr/films.html" class="article__btn">
                 Lire
             </a>
         </article>
@@ -187,7 +175,7 @@
                     Réalisateur connu par le seigneur des anneaux, découvrez qui il est et suivez l'évolution de sa carrière                
                 </p>
             </div>
-            <a href="/fr/replique.html" class="article__btn">
+            <a href="/fr/realisateur.html" class="article__btn">
                 Lire
             </a>
         </article>
@@ -207,7 +195,7 @@
                     Que serait un film sans ses musiques ? Qui les a faites et l’impact de ce thème magique sur le film et son visionnage.                
                 </p>
             </div>
-            <a href="/fr/replique.html" class="article__btn">
+            <a href="/fr/musique.html" class="article__btn">
                 Lire
             </a>
         </article>
@@ -228,7 +216,7 @@
                     Derrière les films, il y a aussi un support : les livres mais aussi un écrivain de génie                
                 </p>
             </div>
-            <a href="/fr/replique.html" class="article__btn">
+            <a href="/fr/livres.html" class="article__btn">
                 Lire
             </a>
         </article>
@@ -290,22 +278,22 @@
         <ul class="footer__reseau">
             <li class="footer__reseau--lien">
                 <a href="https://open.spotify.com/playlist/6RgXVuk0K38IlhWhVALjco?si=c5ac6ac468544caf">
-                    <img src="/public/icones/spotify.svg" alt="logo spotify" class="footer reseau--image">
+                    <img src="/public/icones/spotify.svg" alt="logo spotify" class="footer__reseau--image">
                 </a>
             </li>
             <li class="footer__reseau--lien">
                 <a href="https://instagram.com/jerem_roy?igshid=OGQ5ZDc2ODk2ZA==">
-                    <img src="/public/icones/instagram.svg" alt="logo instagram" class="footer reseau--image">
+                    <img src="/public/icones/instagram.svg" alt="logo instagram" class="footer__reseau--image">
                 </a>
             </li>
             <li class="footer__reseau--lien">
                 <a href="">
-                    <img src="/public/icones/git.svg" alt="logo git hub" class="footer reseau--image">
+                    <img src="/public/icones/git.svg" alt="logo git hub" class="footer__reseau--image">
                 </a>
             </li>
             <li class="footer__reseau--lien">
                 <a href="https://mmi-montbeliard.nathanvanbignootvincler.fr/">
-                    <img src="/public/icones/logo_mmi.png" alt="logo mmi" class="footer reseau--image">
+                    <img src="/public/icones/logo_mmi.png" alt="logo mmi" class="footer__reseau--image">
                 </a>
             </li>
         </ul>
