--- a/fr/autres_projets.html
+++ b/fr/autres_projets.html
@@ -58,13 +58,7 @@
                         <a 
                             class="menu__page--lien"
                             href="/fr/films.html">
-                            Le seigneur des anneaux
-                        </a>
-                        <br>
-                        <a 
-                            class="menu__page--lien"
-                            href="/fr/films.html">
-                            films
+                            Le seigneur des anneaux Films
                         </a>
                     </li>
                     <li class="menu__page">
@@ -85,13 +79,7 @@
                         <a 
                             href="/fr/livres.html"
                             class="menu__page--lien">
-                            Le seigneur des anneaux
-                        </a>
-                        <br>
-                        <a 
-                            href="/fr/livres.html"
-                            class="menu__page--lien">
-                            Livres
+                            Le seigneur des anneaux Livres
                         </a>
                     </li>
                     <li class="menu__page">
@@ -103,14 +91,14 @@
                     </li>
                     <li class="menu__page">
                         <a 
-                            href="/fr/livres.html"
+                            href="/fr/memes.html"
                             class="menu__page--lien">
                             Memes                      
                         </a>
                     </li>
                     <li class="menu__page">
                         <a 
-                            href="/fr/livres.html"
+                            href="/fr/differences.html"
                             class="menu__page--lien">
                             Différences livres / films                        
                         </a>
@@ -125,16 +113,16 @@
    
     <main class="page">
         <header class="page__header">
-            <img src="/public/img/accueil.webp" alt="image trou de hobbit">
+            <img src="/public/img/accueil.webp" alt="image trou de hobbit" class="page__header--img">
             <h1 class="page__header--titre ">
                 Autres projets
             </h1>
+        </header>
+
+        <article class="page__article">            
             <h2 class="page__header--chapo space__chapo">
                 Si vous avez aimé ce site, nous vous proposons d’autres sites réalisés par les élèves du groupe sur le même thème
             </h2>
-        </header>
-
-        <article class="page__article">
             <div 
                 class="projets"
                 x-data="{
@@ -224,22 +212,22 @@
         <ul class="footer__reseau">
             <li class="footer__reseau--lien">
                 <a href="https://open.spotify.com/playlist/6RgXVuk0K38IlhWhVALjco?si=c5ac6ac468544caf">
-                    <img src="/public/icones/spotify.svg" alt="logo spotify" class="footer reseau--image">
+                    <img src="/public/icones/spotify.svg" alt="logo spotify" class="footer__reseau--image">
                 </a>
             </li>
             <li class="footer__reseau--lien">
                 <a href="https://instagram.com/jerem_roy?igshid=OGQ5ZDc2ODk2ZA==">
-                    <img src="/public/icones/instagram.svg" alt="logo instagram" class="footer reseau--image">
+                    <img src="/public/icones/instagram.svg" alt="logo instagram" class="footer__reseau--image">
                 </a>
             </li>
             <li class="footer__reseau--lien">
                 <a href="">
-                    <img src="/public/icones/git.svg" alt="logo git hub" class="footer reseau--image">
+                    <img src="/public/icones/git.svg" alt="logo git hub" class="footer__reseau--image">
                 </a>
             </li>
             <li class="footer__reseau--lien">
                 <a href="https://mmi-montbeliard.nathanvanbignootvincler.fr/">
-                    <img src="/public/icones/logo_mmi.png" alt="logo mmi" class="footer reseau--image">
+                    <img src="/public/icones/logo_mmi.png" alt="logo mmi" class="footer__reseau--image">
                 </a>
             </li>
         </ul>
