--- a/fr/films.html
+++ b/fr/films.html
@@ -58,13 +58,7 @@
                         <a 
                             class="menu__page--lien"
                             href="/fr/films.html">
-                            Le seigneur des anneaux
-                        </a>
-                        <br>
-                        <a 
-                            class="menu__page--lien"
-                            href="/fr/films.html">
-                            films
+                            Le seigneur des anneaux Films
                         </a>
                     </li>
                     <li class="menu__page">
@@ -85,13 +79,7 @@
                         <a 
                             href="/fr/livres.html"
                             class="menu__page--lien">
-                            Le seigneur des anneaux
-                        </a>
-                        <br>
-                        <a 
-                            href="/fr/livres.html"
-                            class="menu__page--lien">
-                            Livres
+                            Le seigneur des anneaux Livres
                         </a>
                     </li>
                     <li class="menu__page">
@@ -103,14 +91,14 @@
                     </li>
                     <li class="menu__page">
                         <a 
-                            href="/fr/livres.html"
+                            href="/fr/memes.html"
                             class="menu__page--lien">
                             Memes                      
                         </a>
                     </li>
                     <li class="menu__page">
                         <a 
-                            href="/fr/livres.html"
+                            href="/fr/differences.html"
                             class="menu__page--lien">
                             Différences livres / films                        
                         </a>
@@ -125,16 +113,16 @@
    
     <main class="page">
         <header class="page__header">
-            <img src="/public/img/accueil.webp" alt="image trou de hobbit">
+            <img src="/public/img/accueil.webp" alt="image trou de hobbit"  class="page__header--img">
             <h1 class="page__header--titre">
                 Le seigneur des anneaux Films
             </h1>
-            <h2 class="page__header--chapo">
-                Piliers du cinéma moderne, retour sur cette trilogie qui a marqué cette industrie et sur son tournage.
-            </h2>
         </header>
 
         <article class="page__article">
+            <h2 class="page__header--chapo">
+                Piliers du cinéma moderne, retour sur cette trilogie qui a marqué cette industrie et sur son tournage.
+            </h2>
             <img 
                 src="/public/img/affiche_trilogie.webp" 
                 alt="affiches des films"
@@ -162,16 +150,20 @@
                 Peter Jackson, néo-zélandais d'origine c'est donc tourné vers les lieux de sa terre natale pour le plus de réalisme possible grâce à la géographie de l'ile avec ses montagnes, ses plaines et ses forêts. 
                 Pour le film, c'est donc plusieurs lieux fictifs qui ont été construit en vrai comme Edoras, la capitale du Rohan qui a ensuite été démontée, et Hobbitebourg, le village hobbit qui lui est toujours présent et que l'on peut visiter et qui fait vivre le tourisme du pays.
             </p>
+            
             <p class="page__article--texte">
                 Comme on l'a dit, le tournage a été gigantesque, avec quelques chiffres c'est encore plus flagrant :
-                <p>- 20 602 figurants au total pour le film </p>
-                <p>- 1 600 prothèses de pied de hobbits pour le 1er film </p>
-                <p>- 19 000 costumes </p>
-                <p>- 48 000 pièces d'armure </p>
-                <p>- 2 000 armes et 500 arcs </p>
-                <p>- 159 prothèses de nez juste pour Gandalf </p>
-                <p>- Et enfin plus de 12 millions d'anneaux assemblés à la mains pour faire les cottes de mailles.</p> 
             </p>
+            <ul>
+                <li class="page__article--liste">- 20 602 figurants au total pour le film </li>
+                <li class="page__article--liste">- 1 600 prothèses de pied de hobbits pour le 1er film </li>
+                <li class="page__article--liste">- 19 000 costumes </li>
+                <li class="page__article--liste">- 48 000 pièces d'armure </li>
+                <li class="page__article--liste">- 2 000 armes et 500 arcs </li>
+                <li class="page__article--liste">- 159 prothèses de nez juste pour Gandalf </li>
+                <li class="page__article--liste">- Et enfin plus de 12 millions d'anneaux assemblés à la mains pour faire les cottes de mailles.</li>
+            </ul>
+       
             <p class="page__article--texte">
                 Le tout avec un casting royal et des acteurs impliqués au possible (Viggo Mortensen [Aragorn] qui ne se séparait jamais de son cheval ni de son épée pour mieux incarner son personnage par exemple). 
                 Pour recréer tous ces décors et lieux emblématiques des livres, Peter Jackson a donc fait appel aux illustrateurs des livres John Howe et Alan Lee, pour un résultat frappant de réalisme. Le résultat on le connait, des images magnifiques avec des paysages à couper le souffle et un total de 17 Oscars pour 3 films 
@@ -240,22 +232,22 @@
         <ul class="footer__reseau">
             <li class="footer__reseau--lien">
                 <a href="https://open.spotify.com/playlist/6RgXVuk0K38IlhWhVALjco?si=c5ac6ac468544caf">
-                    <img src="/public/icones/spotify.svg" alt="logo spotify" class="footer reseau--image">
+                    <img src="/public/icones/spotify.svg" alt="logo spotify" class="footer__reseau--image">
                 </a>
             </li>
             <li class="footer__reseau--lien">
                 <a href="https://instagram.com/jerem_roy?igshid=OGQ5ZDc2ODk2ZA==">
-                    <img src="/public/icones/instagram.svg" alt="logo instagram" class="footer reseau--image">
+                    <img src="/public/icones/instagram.svg" alt="logo instagram" class="footer__reseau--image">
                 </a>
             </li>
             <li class="footer__reseau--lien">
                 <a href="">
-                    <img src="/public/icones/git.svg" alt="logo git hub" class="footer reseau--image">
+                    <img src="/public/icones/git.svg" alt="logo git hub" class="footer__reseau--image">
                 </a>
             </li>
             <li class="footer__reseau--lien">
                 <a href="https://mmi-montbeliard.nathanvanbignootvincler.fr/">
-                    <img src="/public/icones/logo_mmi.png" alt="logo mmi" class="footer reseau--image">
+                    <img src="/public/icones/logo_mmi.png" alt="logo mmi" class="footer__reseau--image">
                 </a>
             </li>
         </ul>
