--- a/fr/livres.html
+++ b/fr/livres.html
@@ -60,13 +60,7 @@
                         <a 
                             class="menu__page--lien"
                             href="/fr/films.html">
-                            Le seigneur des anneaux
-                        </a>
-                        <br>
-                        <a 
-                            class="menu__page--lien"
-                            href="/fr/films.html">
-                            films
+                            Le seigneur des anneaux Films
                         </a>
                     </li>
                     <li class="menu__page">
@@ -87,13 +81,7 @@
                         <a 
                             href="/fr/livres.html"
                             class="menu__page--lien">
-                            Le seigneur des anneaux
-                        </a>
-                        <br>
-                        <a 
-                            href="/fr/livres.html"
-                            class="menu__page--lien">
-                            Livres
+                            Le seigneur des anneaux Livres
                         </a>
                     </li>
                     <li class="menu__page">
@@ -105,14 +93,14 @@
                     </li>
                     <li class="menu__page">
                         <a 
-                            href="/fr/livres.html"
+                            href="/fr/memes.html"
                             class="menu__page--lien">
                             Memes                      
                         </a>
                     </li>
                     <li class="menu__page">
                         <a 
-                            href="/fr/livres.html"
+                            href="/fr/differences.html"
                             class="menu__page--lien">
                             Différences livres / films                        
                         </a>
@@ -127,17 +115,17 @@
    
     <main class="page">
         <header class="page__header">
-            <img src="/public/img/accueil.webp" alt="image trou de hobbit">
+            <img src="/public/img/accueil.webp" alt="image trou de hobbit" class="page__header--img">
             <h1 class="page__header--titre">
                 Le seigneur des anneaux
                 Livres 
-            </h1>
-            <h2 class="page__header--chapo">
-                L'univers épique des livres "Le Seigneur des Anneaux" mais aussi l'homme derrière la magie            
-            </h2>
+            </h1>        
         </header>
 
         <article class="page__article">
+            <h2 class="page__header--chapo">
+                L'univers épique des livres "Le Seigneur des Anneaux" mais aussi l'homme derrière la magie            
+            </h2>
             <img 
                 src="/public/img/tolkien.webp" 
                 alt="image J.R.R Tolkien"
@@ -415,22 +403,22 @@
         <ul class="footer__reseau">
             <li class="footer__reseau--lien">
                 <a href="https://open.spotify.com/playlist/6RgXVuk0K38IlhWhVALjco?si=c5ac6ac468544caf">
-                    <img src="/public/icones/spotify.svg" alt="logo spotify" class="footer reseau--image">
+                    <img src="/public/icones/spotify.svg" alt="logo spotify" class="footer__reseau--image">
                 </a>
             </li>
             <li class="footer__reseau--lien">
                 <a href="https://instagram.com/jerem_roy?igshid=OGQ5ZDc2ODk2ZA==">
-                    <img src="/public/icones/instagram.svg" alt="logo instagram" class="footer reseau--image">
+                    <img src="/public/icones/instagram.svg" alt="logo instagram" class="footer__reseau--image">
                 </a>
             </li>
             <li class="footer__reseau--lien">
                 <a href="">
-                    <img src="/public/icones/git.svg" alt="logo git hub" class="footer reseau--image">
+                    <img src="/public/icones/git.svg" alt="logo git hub" class="footer__reseau--image">
                 </a>
             </li>
             <li class="footer__reseau--lien">
                 <a href="https://mmi-montbeliard.nathanvanbignootvincler.fr/">
-                    <img src="/public/icones/logo_mmi.png" alt="logo mmi" class="footer reseau--image">
+                    <img src="/public/icones/logo_mmi.png" alt="logo mmi" class="footer__reseau--image">
                 </a>
             </li>
         </ul>
