css footer fini

--- a/fr/films.html
+++ b/fr/films.html
@@ -241,7 +241,7 @@
                 </a>
             </li>
             <li class="footer__reseau--lien">
-                <a href="">
+                <a href="https://github.com/Jeremy-ROY-22">
                     <img src="/public/icones/git.svg" alt="logo git hub" class="footer__reseau--image">
                 </a>
             </li>
