--- a/fr/replique.html
+++ b/fr/replique.html
@@ -219,13 +219,13 @@
                 </a>
             </li>
             <li class="footer__reseau--lien">
-                <a href="">
+                <a href="https://github.com/Jeremy-ROY-22">
                     <img src="/public/icones/git.svg" alt="logo git hub" class="footer__reseau--image">
                 </a>
             </li>
             <li class="footer__reseau--lien">
                 <a href="https://mmi-montbeliard.nathanvanbignootvincler.fr/">
-                    <img src="/public/icones/logo_mmi.png" alt="logo mmi" class="footer__reseau--image">
+                    <img src="/public/icones/logo_mmi.png" alt="logo mmi" class="footer__reseau--image mmi">
                 </a>
             </li>
         </ul>
