mise en page film

--- a/fr/films.html
+++ b/fr/films.html
@@ -154,7 +154,7 @@
             <p class="page__article--texte">
                 Comme on l'a dit, le tournage a été gigantesque, avec quelques chiffres c'est encore plus flagrant :
             </p>
-            <ul>
+            <ul class="liste__chiffres">
                 <li class="page__article--liste">- 20 602 figurants au total pour le film </li>
                 <li class="page__article--liste">- 1 600 prothèses de pied de hobbits pour le 1er film </li>
                 <li class="page__article--liste">- 19 000 costumes </li>
